--- a/webdav/rootfs/etc/templates/lighttpd.conf.templ
+++ b/webdav/rootfs/etc/templates/lighttpd.conf.templ
@@ -17,4 +17,4 @@ var.logdir            = "/config/log"
 accesslog.filename    = var.logdir + "/access.log"
 server.errorlog       = var.logdir  + "/error.log"
 
-include "/config/webdav.conf"
+include "/etc/lighttpd/webdav.conf"
